--- a/packages/hoppscotch-backend/package.json
+++ b/packages/hoppscotch-backend/package.json
@@ -5,128 +5,112 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
-  "files": [
-    "prisma",
-    "dist"
-  ],
-  "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "nest build",
-    "generate-gql-sdl": "cross-env GQL_SCHEMA_EMIT_LOCATION='../../../gql-gen/backend-schema.gql' GENERATE_GQL_SCHEMA=true WHITELISTED_ORIGINS='' nest start",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "postinstall": "prisma generate && pnpm run generate-gql-sdl",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "do-test": "pnpm run test"
-  },
-  "dependencies": {
-    "@apollo/server": "4.9.5",
-    "@nestjs-modules/mailer": "1.9.1",
-    "@nestjs/apollo": "12.0.9",
-    "@nestjs/common": "10.2.7",
-    "@nestjs/config": "3.1.1",
-    "@nestjs/core": "10.2.7",
-    "@nestjs/graphql": "12.0.9",
-    "@nestjs/jwt": "10.1.1",
-    "@nestjs/passport": "10.0.2",
-    "@nestjs/platform-express": "10.2.7",
-    "@nestjs/schedule": "4.0.1",
-    "@nestjs/swagger": "7.4.0",
-    "@nestjs/terminus": "10.2.3",
-    "@nestjs/throttler": "5.0.1",
-    "@prisma/client": "5.8.1",
-    "argon2": "0.30.3",
-    "bcrypt": "5.1.0",
-    "class-transformer": "0.5.1",
-    "class-validator": "0.14.1",
-    "cookie": "0.5.0",
-    "cookie-parser": "1.4.6",
-    "cron": "3.1.6",
-    "express": "4.20.0",
-    "express-session": "1.17.3",
-    "fp-ts": "2.13.1",
-    "graphql": "16.8.1",
-    "graphql-query-complexity": "0.12.0",
-    "graphql-redis-subscriptions": "2.6.0",
-    "graphql-subscriptions": "2.0.0",
-    "handlebars": "4.7.7",
-    "io-ts": "2.2.16",
-    "luxon": "3.2.1",
-    "nodemailer": "6.9.14",
-    "passport": "0.6.0",
-    "passport-github2": "0.1.12",
-    "passport-google-oauth20": "2.0.0",
-    "passport-jwt": "4.0.1",
-    "passport-local": "1.0.0",
-    "passport-microsoft": "1.0.0",
-    "posthog-node": "4.2.0",
-    "prisma": "5.8.1",
-    "reflect-metadata": "0.1.13",
-    "rimraf": "3.0.2",
-    "rxjs": "7.6.0"
-  },
-  "devDependencies": {
-    "@nestjs/cli": "10.2.1",
-    "@nestjs/schematics": "10.0.3",
-    "@nestjs/testing": "10.2.7",
-    "@relmify/jest-fp-ts": "2.0.2",
-    "@types/argon2": "0.15.0",
-    "@types/bcrypt": "5.0.0",
-    "@types/cookie": "0.5.1",
-    "@types/cookie-parser": "1.4.3",
-    "@types/express": "4.17.14",
-    "@types/jest": "29.4.0",
-    "@types/luxon": "3.2.0",
-    "@types/node": "18.11.10",
-    "@types/nodemailer": "6.4.7",
-    "@types/passport-github2": "1.2.5",
-    "@types/passport-google-oauth20": "2.0.11",
-    "@types/passport-jwt": "3.0.8",
-    "@types/passport-microsoft": "0.0.0",
-    "@types/supertest": "2.0.12",
-    "@typescript-eslint/eslint-plugin": "5.45.0",
-    "@typescript-eslint/parser": "5.45.0",
-    "cross-env": "7.0.3",
-    "eslint": "8.29.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-prettier": "4.2.1",
-    "jest": "29.4.1",
-    "jest-mock-extended": "3.0.1",
-    "jwt": "link:@types/nestjs/jwt",
-    "prettier": "2.8.4",
-    "source-map-support": "0.5.21",
-    "supertest": "6.3.2",
-    "ts-jest": "29.0.5",
-    "ts-loader": "9.4.2",
-    "ts-node": "10.9.1",
-    "tsconfig-paths": "4.1.1",
-    "typescript": "4.9.3"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "setupFilesAfterEnv": [
-      "../jest.setup.js"
-    ],
-    "preset": "ts-jest",
-    "clearMocks": true,
-    "collectCoverage": true,
-    "coverageDirectory": "coverage",
-    "coverageProvider": "v8",
-    "rootDir": "src",
-    "moduleNameMapper": {
-      "^src/(.*)$": "<rootDir>/$1"
-    }
-  }
+  "files_0": "prisma",
+  "files_1": "dist",
+  "scripts_prebuild": "rimraf dist",
+  "scripts_build": "nest build",
+  "scripts_generate-gql-sdl": "cross-env GQL_SCHEMA_EMIT_LOCATION='../../../gql-gen/backend-schema.gql' GENERATE_GQL_SCHEMA=true WHITELISTED_ORIGINS='' nest start",
+  "scripts_format": "prettier --write \"src//.ts\" \"test//.ts\"",
+  "scripts_start": "nest start",
+  "scripts_start:dev": "nest start --watch",
+  "scripts_start:debug": "nest start --debug --watch",
+  "scripts_start:prod": "node dist/main",
+  "scripts_lint": "eslint \"{src,apps,libs,test}//*.ts\" --fix",
+  "scripts_test": "jest",
+  "scripts_postinstall": "prisma generate && pnpm run generate-gql-sdl",
+  "scripts_test:watch": "jest --watch",
+  "scripts_test:cov": "jest --coverage",
+  "scripts_test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+  "scripts_test:e2e": "jest --config ./test/jest-e2e.json",
+  "scripts_do-test": "pnpm run test",
+  "dependencies_@apollo/server": "4.9.5",
+  "dependencies_@nestjs-modules/mailer": "1.9.1",
+  "dependencies_@nestjs/apollo": "12.0.9",
+  "dependencies_@nestjs/common": "10.2.7",
+  "dependencies_@nestjs/config": "3.1.1",
+  "dependencies_@nestjs/core": "10.2.7",
+  "dependencies_@nestjs/graphql": "12.0.9",
+  "dependencies_@nestjs/jwt": "10.1.1",
+  "dependencies_@nestjs/passport": "10.0.2",
+  "dependencies_@nestjs/platform-express": "10.2.7",
+  "dependencies_@nestjs/schedule": "4.0.1",
+  "dependencies_@nestjs/swagger": "7.4.0",
+  "dependencies_@nestjs/terminus": "10.2.3",
+  "dependencies_@nestjs/throttler": "5.0.1",
+  "dependencies_@prisma/client": "5.8.1",
+  "dependencies_argon2": "0.30.3",
+  "dependencies_bcrypt": "5.1.0",
+  "dependencies_class-transformer": "0.5.1",
+  "dependencies_class-validator": "0.14.1",
+  "dependencies_cookie": "0.5.0",
+  "dependencies_cookie-parser": "1.4.6",
+  "dependencies_cron": "3.1.6",
+  "dependencies_express": "4.20.0",
+  "dependencies_express-session": "1.17.3",
+  "dependencies_fp-ts": "2.13.1",
+  "dependencies_graphql": "16.8.1",
+  "dependencies_graphql-query-complexity": "0.12.0",
+  "dependencies_graphql-redis-subscriptions": "2.6.0",
+  "dependencies_graphql-subscriptions": "2.0.0",
+  "dependencies_handlebars": "4.7.7",
+  "dependencies_io-ts": "2.2.16",
+  "dependencies_luxon": "3.2.1",
+  "dependencies_nodemailer": "6.9.14",
+  "dependencies_passport": "0.6.0",
+  "dependencies_passport-github2": "0.1.12",
+  "dependencies_passport-google-oauth20": "2.0.0",
+  "dependencies_passport-jwt": "4.0.1",
+  "dependencies_passport-local": "1.0.0",
+  "dependencies_passport-microsoft": "1.0.0",
+  "dependencies_posthog-node": "4.2.0",
+  "dependencies_prisma": "5.8.1",
+  "dependencies_reflect-metadata": "0.1.13",
+  "dependencies_rimraf": "3.0.2",
+  "dependencies_rrxjs": "7.6.0",
+  "devDependencies_@nestjs/cli": "10.2.1",
+  "devDependencies_@nestjs/schematics": "10.0.3",
+  "devDependencies_@nestjs/testing": "10.2.7",
+  "devDependencies_@relmify/jest-fp-ts": "2.0.2",
+  "devDependencies_@types/argon2": "0.15.0",
+  "devDependencies_@types/bcrypt": "5.0.0",
+  "devDependencies_@types/cookie": "0.5.1",
+  "devDependencies_@types/cookie-parser": "1.4.3",
+  "devDependencies_@types/express": "4.17.14",
+  "devDependencies_@types/jest": "29.4.0",
+  "devDependencies_@types/luxon": "3.2.0",
+  "devDependencies_@types/node": "18.11.10",
+  "devDependencies_@types/nodemailer": "6.4.7",
+  "devDependencies_@types/passport-github2": "1.2.5",
+  "devDependencies_@types/passport-google-oauth20": "2.0.11",
+  "devDependencies_@types/passport-jwt": "3.0.8",
+  "devDependencies_@types/passport-microsoft": "0.0.0",
+  "devDependencies_@types/supertest": "2.0.12",
+  "devDependencies_@typescript-eslint/eslint-plugin": "5.45.0",
+  "devDependencies_@typescript-eslint/parser": "5.45.0",
+  "devDependencies_cross-env": "7.0.3",
+  "devDependencies_eslint": "8.29.0",
+  "devDependencies_eslint-config-prettier": "8.5.0",
+  "devDependencies_eslint-plugin-prettier": "4.2.1",
+  "devDependencies_jest": "29.4.1",
+  "devDependencies_jest-mock-extended": "3.0.1",
+  "devDependencies_jwt": "link:@types/nestjs/jwt",
+  "devDependencies_prettier": "2.8.4",
+  "devDependencies_source-map-support": "0.5.21",
+  "devDependencies_supertest": "6.3.2",
+  "devDependencies_ts-jest": "29.0.5",
+  "devDependencies_ts-loader": "9.4.2",
+  "devDependencies_ts-node": "10.9.1",
+  "devDependencies_tsconfig-paths": "4.1.1",
+  "devDependencies_typescript": "4.9.3",
+  "jest_moduleFileExtensions_0": "js",
+  "jest_moduleFileExtensions_1": "json",
+  "jest_moduleFileExtensions_2": "ts",
+  "jest_setupFilesAfterEnv_0": "../jest.setup.js",
+  "jest_preset": "ts-jest",
+  "jest_clearMocks": true,
+  "jest_collectCoverage": true,
+  "jest_coverageDirectory": "coverage",
+  "jest_coverageProvider": "v8",
+  "jest_rootDir": "src",
+  "jest_moduleNameMapper_^src/(.*)$": "<rootDir>/$1"
 }
