--- a/packages/hoppscotch-selfhost-web/package.json
+++ b/packages/hoppscotch-selfhost-web/package.json
@@ -3,84 +3,78 @@
   "private": true,
   "version": "2024.9.1",
   "type": "module",
-  "scripts": {
-    "dev:vite": "vite",
-    "dev:gql-codegen": "graphql-codegen --require dotenv/config --config gql-codegen.yml dotenv_config_path=\"../../.env\" --watch",
-    "dev": "pnpm exec npm-run-all -p -l dev:*",
-    "build": "node --max_old_space_size=4096 ./node_modules/vite/bin/vite.js build",
-    "preview": "vite preview",
-    "lint": "eslint src --ext .ts,.js,.vue --ignore-path .gitignore .",
-    "lint:ts": "vue-tsc --noEmit",
-    "lintfix": "eslint --fix src --ext .ts,.js,.vue --ignore-path .gitignore .",
-    "prod-lint": "cross-env HOPP_LINT_FOR_PROD=true pnpm run lint",
-    "generate": "pnpm run build",
-    "do-dev": "pnpm run dev",
-    "do-build-prod": "pnpm run build",
-    "do-lint": "pnpm run prod-lint",
-    "do-typecheck": "pnpm run lint",
-    "do-lintfix": "pnpm run lintfix",
-    "gql-codegen": "graphql-codegen --require dotenv/config --config gql-codegen.yml dotenv_config_path=\"../../.env\"",
-    "postinstall": "pnpm run gql-codegen"
-  },
-  "dependencies": {
-    "@fontsource-variable/inter": "5.0.15",
-    "@fontsource-variable/material-symbols-rounded": "5.0.16",
-    "@fontsource-variable/roboto-mono": "5.0.16",
-    "@hoppscotch/common": "workspace:^",
-    "@hoppscotch/data": "workspace:^",
-    "@hoppscotch/ui": "0.1.0",
-    "@import-meta-env/unplugin": "0.4.10",
-    "axios": "1.7.5",
-    "buffer": "6.0.3",
-    "fp-ts": "2.16.1",
-    "process": "0.11.10",
-    "rxjs": "7.8.1",
-    "stream-browserify": "3.0.0",
-    "util": "0.12.5",
-    "verzod": "0.2.2",
-    "vue": "3.3.9",
-    "workbox-window": "7.0.0",
-    "zod": "3.22.4"
-  },
-  "devDependencies": {
-    "@graphql-codegen/add": "5.0.0",
-    "@graphql-codegen/cli": "5.0.0",
-    "@graphql-codegen/typed-document-node": "5.0.1",
-    "@graphql-codegen/typescript": "4.0.1",
-    "@graphql-codegen/typescript-operations": "4.0.1",
-    "@graphql-codegen/typescript-urql-graphcache": "3.0.0",
-    "@graphql-codegen/urql-introspection": "3.0.0",
-    "@graphql-typed-document-node/core": "3.2.0",
-    "@iconify-json/lucide": "1.1.144",
-    "@intlify/vite-plugin-vue-i18n": "7.0.0",
-    "@rushstack/eslint-patch": "1.6.0",
-    "@typescript-eslint/eslint-plugin": "6.13.2",
-    "@typescript-eslint/parser": "6.13.2",
-    "@vitejs/plugin-legacy": "4.1.1",
-    "@vitejs/plugin-vue": "4.5.1",
-    "@vue/eslint-config-typescript": "12.0.0",
-    "autoprefixer": "10.4.16",
-    "cross-env": "7.0.3",
-    "eslint": "8.55.0",
-    "eslint-plugin-prettier": "5.0.1",
-    "eslint-plugin-vue": "9.19.2",
-    "npm-run-all": "4.1.5",
-    "postcss": "8.4.31",
-    "prettier-plugin-tailwindcss": "0.5.7",
-    "tailwindcss": "3.3.5",
-    "typescript": "5.3.2",
-    "unplugin-fonts": "1.1.1",
-    "unplugin-icons": "0.17.4",
-    "unplugin-vue-components": "0.25.2",
-    "vite": "4.5.0",
-    "vite-plugin-fonts": "0.7.0",
-    "vite-plugin-html-config": "1.0.11",
-    "vite-plugin-inspect": "0.7.42",
-    "vite-plugin-pages": "0.31.0",
-    "vite-plugin-pages-sitemap": "1.6.1",
-    "vite-plugin-pwa": "0.17.3",
-    "vite-plugin-static-copy": "0.17.1",
-    "vite-plugin-vue-layouts": "0.8.0",
-    "vue-tsc": "1.8.24"
-  }
+  "scripts.dev:vite": "vite",
+  "scripts.dev:gql-codegen": "graphql-codegen --require dotenv/config --config gql-codegen.yml dotenv_config_path=\"../../.env\" --watch",
+  "scripts.dev": "pnpm exec npm-run-all -p -l dev:*",
+  "scripts.build": "node --max_old_space_size=4096 ./node_modules/vite/bin/vite.js build",
+  "scripts.preview": "vite preview",
+  "scripts.lint": "eslint src --ext .ts,.js,.vue --ignore-path .gitignore .",
+  "scripts.lint:ts": "vue-tsc --noEmit",
+  "scripts.lintfix": "eslint --fix src --ext .ts,.js,.vue --ignore-path .gitignore .",
+  "scripts.prod-lint": "cross-env HOPP_LINT_FOR_PROD=true pnpm run lint",
+  "scripts.generate": "pnpm run build",
+  "scripts.do-dev": "pnpm run dev",
+  "scripts.do-build-prod": "pnpm run build",
+  "scripts.do-lint": "pnpm run prod-lint",
+  "scripts.do-typecheck": "pnpm run lint",
+  "scripts.do-lintfix": "pnpm run lintfix",
+  "scripts.gql-codegen": "graphql-codegen --require dotenv/config --config gql-codegen.yml dotenv_config_path=\"../../.env\"",
+  "scripts.postinstall": "pnpm run gql-codegen",
+  "dependencies.@fontsource-variable/inter": "5.0.15",
+  "dependencies.@fontsource-variable/material-symbols-rounded": "5.0.16",
+  "dependencies.@fontsource-variable/roboto-mono": "5.0.16",
+  "dependencies.@hoppscotch/common": "workspace:^",
+  "dependencies.@hoppscotch/data": "workspace:^",
+  "dependencies.@hoppscotch/ui": "0.1.0",
+  "dependencies.@import-meta-env/unplugin": "0.4.10",
+  "dependencies.axios": "1.7.5",
+  "dependencies.buffer": "6.0.3",
+  "dependencies.fp-ts": "2.16.1",
+  "dependencies.process": "0.11.10",
+  "dependencies.rjx": "7.8.1",
+  "dependencies.stream-browserify": "3.0.0",
+  "dependencies.util": "0.12.5",
+  "dependencies.verzod": "0.2.2",
+  "dependencies.vue": "3.3.9",
+  "dependencies.workbox-window": "7.0.0",
+  "dependencies.zod": "3.22.4",
+  "devDependencies.@graphql-codegen/add": "5.0.0",
+  "devDependencies.@graphql-codegen/cli": "5.0.0",
+  "devDependencies.@graphql-codegen/typed-document-node": "5.0.1",
+  "devDependencies.@graphql-codegen/typescript": "4.0.1",
+  "devDependencies.@graphql-codegen/typescript-operations": "4.0.1",
+  "devDependencies.@graphql-codegen/typescript-urql-graphcache": "3.0.0",
+  "devDependencies.@graphql-codegen/urql-introspection": "3.0.0",
+  "devDependencies.@graphql-typed-document-node/core": "3.2.0",
+  "devDependencies.@iconify-json/lucide": "1.1.144",
+  "devDependencies.@intlify/vite-plugin-vue-i18n": "7.0.0",
+  "devDependencies.@rushstack/eslint-patch": "1.6.0",
+  "devDependencies.@typescript-eslint/eslint-plugin": "6.13.2",
+  "devDependencies.@typescript-eslint/parser": "6.13.2",
+  "devDependencies.@vitejs/plugin-legacy": "4.1.1",
+  "devDependencies.@vitejs/plugin-vue": "4.5.1",
+  "devDependencies.@vue/eslint-config-typescript": "12.0.0",
+  "devDependencies.autoprefixer": "10.4.16",
+  "devDependencies.cross-env": "7.0.3",
+  "devDependencies.eslint": "8.55.0",
+  "devDependencies.eslint-plugin-prettier": "5.0.1",
+  "devDependencies.eslint-plugin-vue": "9.19.2",
+  "devDependencies.npm-run-all": "4.1.5",
+  "devDependencies.postcss": "8.4.31",
+  "devDependencies.prettier-plugin-tailwindcss": "0.5.7",
+  "devDependencies.tailwindcss": "3.3.5",
+  "devDependencies.typescript": "5.3.2",
+  "devDependencies.unplugin-fonts": "1.1.1",
+  "devDependencies.unplugin-icons": "0.17.4",
+  "devDependencies.unplugin-vue-components": "0.25.2",
+  "devDependencies.vite": "4.5.0",
+  "devDependencies.vite-plugin-fonts": "0.7.0",
+  "devDependencies.vite-plugin-html-config": "1.0.11",
+  "devDependencies.vite-plugin-inspect": "0.7.42",
+  "devDependencies.vite-plugin-pages": "0.31.0",
+  "devDependencies.vite-plugin-pages-sitemap": "1.6.1",
+  "devDependencies.vite-plugin-pwa": "0.17.3",
+  "devDependencies.vite-plugin-static-copy": "0.17.1",
+  "devDependencies.vite-plugin-vue-layouts": "0.8.0",
+  "devDependencies.vue-tsc": "1.8.24"
 }
