--- a/packages/hoppscotch-agent/package.json
+++ b/packages/hoppscotch-agent/package.json
@@ -3,32 +3,26 @@
   "private": true,
   "version": "0.1.1",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview",
-    "tauri": "tauri"
-  },
-  "dependencies": {
-    "@hoppscotch/ui": "^0.2.1",
-    "@tauri-apps/api": ">=2.0.0-rc.0",
-    "@tauri-apps/plugin-shell": ">=2.0.0-rc.0",
-    "@vueuse/core": "^11.1.0",
-    "axios": "^1.7.7",
-    "fp-ts": "^2.16.9",
-    "vue": "^3.3.4"
-  },
-  "devDependencies": {
-    "@iconify-json/lucide": "^1.2.6",
-    "@tauri-apps/cli": ">=2.0.0-rc.0",
-    "@types/node": "^22.7.0",
-    "@vitejs/plugin-vue": "^5.1.4",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13",
-    "typescript": "^5.2.2",
-    "unplugin-icons": "^0.19.3",
-    "vite": "^5.4.7",
-    "vue-tsc": "^2.0.22"
-  }
+  "scripts_dev": "vite",
+  "scripts_build": "vue-tsc --noEmit && vite build",
+  "scripts_preview": "vite preview",
+  "scripts_tauri": "tauri",
+  "dependencies_@hoppscotch/ui": "^0.2.1",
+  "dependencies_@tauri-apps/api": ">=2.0.0-rc.0",
+  "dependencies_@tauri-apps/plugin-shell": ">=2.0.0-rc.0",
+  "dependencies_@vueuse/core": "^11.1.0",
+  "dependencies_axios": "^1.7.7",
+  "dependencies_fp-ts": "^2.16.9",
+  "dependencies_vue": "^3.3.4",
+  "devDependencies_@iconify-json/lucide": "^1.2.6",
+  "devDependencies_@tauri-apps/cli": ">=2.0.0-rc.0",
+  "devDependencies_@types/node": "^22.7.0",
+  "devDependencies_@vitejs/plugin-vue": "^5.1.4",
+  "devDependencies_autoprefixer": "^10.4.20",
+  "devDependencies_postcss": "^8.4.47",
+  "devDependencies_tailwindcss": "^3.4.13",
+  "devDependencies_typescript": "^5.2.2",
+  "devDependencies_unplugin-icons": "^0.19.3",
+  "devDependencies_vite": "^5.4.7",
+  "devDependencies_vue-tsc": "^2.0.22"
 }
