--- a/packages/hoppscotch-agent/tsconfig.node.json
+++ b/packages/hoppscotch-agent/tsconfig.node.json
@@ -1,10 +1,8 @@
 {
-  "compilerOptions": {
-    "composite": true,
-    "skipLibCheck": true,
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true
-  },
-  "include": ["vite.config.ts"]
+  "compilerOptions_composite": true,
+  "compilerOptions_skipLibCheck": true,
+  "compilerOptions_module": "ESNext",
+  "compilerOptions_moduleResolution": "bundler",
+  "compilerOptions_allowSyntheticDefaultImports": true,
+  "include_0": "vite.config.ts"
 }
