--- a/packages/hoppscotch-data/package.json
+++ b/packages/hoppscotch-data/package.json
@@ -9,42 +9,30 @@
   "files": [
     "dist/*"
   ],
-  "scripts": {
-    "dev": "vite build --watch",
-    "build:code": "vite build",
-    "build:decl": "tsc --project tsconfig.decl.json",
-    "build": "pnpm run build:code && pnpm run build:decl",
-    "prepare": "pnpm run build:code && pnpm run build:decl",
-    "do-typecheck": "pnpm exec tsc --noEmit"
+  "scripts.dev": "vite build --watch",
+  "scripts.build:code": "vite build",
+  "scripts.build:decl": "tsc --project tsconfig.decl.json",
+  "scripts.build": "pnpm run build:code && pnpm run build:decl",
+  "scripts.prepare": "pnpm run build:code && pnpm run build:decl",
+  "scripts.do-typecheck": "pnpm exec tsc --noEmit",
+  "exports.": {
+    "import": "./dist/hoppscotch-data.js",
+    "require": "./dist/hoppscotch-data.cjs",
+    "type": "./dist/index.d.ts"
   },
-  "exports": {
-    ".": {
-      "import": "./dist/hoppscotch-data.js",
-      "require": "./dist/hoppscotch-data.cjs",
-      "type": "./dist/index.d.ts"
-    }
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/hoppscotch/hoppscotch.git"
-  },
+  "repository.type": "git",
+  "repository.url": "git+https://github.com/hoppscotch/hoppscotch.git",
   "author": "Hoppscotch (support@hoppscotch.io)",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/hoppscotch/hoppscotch/issues"
-  },
+  "bugs.url": "https://github.com/hoppscotch/hoppscotch/issues",
   "homepage": "https://github.com/hoppscotch/hoppscotch#readme",
-  "devDependencies": {
-    "@types/lodash": "4.14.200",
-    "typescript": "5.2.2",
-    "vite": "4.5.0"
-  },
-  "dependencies": {
-    "fp-ts": "2.16.1",
-    "io-ts": "2.2.20",
-    "lodash": "4.17.21",
-    "parser-ts": "0.7.0",
-    "verzod": "0.2.2",
-    "zod": "3.22.4"
-  }
+  "devDependencies.@types/lodash": "4.14.200",
+  "devDependencies.typescript": "5.2.2",
+  "devDependencies.vite": "4.5.0",
+  "dependencies.fp-ts": "2.16.1",
+  "dependencies.io-ts": "2.2.20",
+  "dependencies.lodash": "4.17.21",
+  "dependencies.parser-ts": "0.7.0",
+  "dependencies.verzod": "0.2.2",
+  "dependencies.zod": "3.22.4"
 }
