--- a/packages/hoppscotch-selfhost-desktop/package.json
+++ b/packages/hoppscotch-selfhost-desktop/package.json
@@ -3,83 +3,77 @@
   "private": true,
   "version": "2024.9.1",
   "type": "module",
-  "scripts": {
-    "dev:vite": "vite",
-    "dev:gql-codegen": "graphql-codegen --require dotenv/config --config gql-codegen.yml dotenv_config_path=\"../../.env\" --watch",
-    "dev": "pnpm exec npm-run-all -p -l dev:*",
-    "build": "node --max_old_space_size=4096 ./node_modules/vite/bin/vite.js build",
-    "preview": "vite preview",
-    "tauri": "tauri",
-    "gql-codegen": "graphql-codegen --require dotenv/config --config gql-codegen.yml dotenv_config_path=\"../../.env\""
-  },
-  "dependencies": {
-    "@fontsource-variable/inter": "5.0.15",
-    "@fontsource-variable/material-symbols-rounded": "5.0.16",
-    "@fontsource-variable/roboto-mono": "5.0.16",
-    "@hoppscotch/common": "workspace:^",
-    "@hoppscotch/data": "workspace:^",
-    "@platform/auth": "0.1.106",
-    "@tauri-apps/api": "1.5.1",
-    "@tauri-apps/cli": "1.5.6",
-    "@vueuse/core": "10.5.0",
-    "axios": "1.7.5",
-    "buffer": "6.0.3",
-    "dioc": "3.0.2",
-    "environments.api": "link:@platform/environments/environments.api",
-    "event": "link:@tauri-apps/api/event",
-    "fp-ts": "2.16.1",
-    "lodash-es": "4.17.21",
-    "process": "0.11.10",
-    "rxjs": "7.8.1",
-    "shell": "link:@tauri-apps/api/shell",
-    "stream-browserify": "3.0.0",
-    "tauri": "link:@tauri-apps/api/tauri",
-    "tauri-plugin-store-api": "0.0.0",
-    "util": "0.12.5",
-    "verzod": "0.2.2",
-    "vue": "3.3.9",
-    "workbox-window": "6.6.0",
-    "zod": "3.22.4"
-  },
-  "devDependencies": {
-    "@graphql-codegen/add": "5.0.0",
-    "@graphql-codegen/cli": "5.0.0",
-    "@graphql-codegen/typed-document-node": "5.0.1",
-    "@graphql-codegen/typescript": "4.0.1",
-    "@graphql-codegen/typescript-operations": "4.0.1",
-    "@graphql-codegen/typescript-urql-graphcache": "2.4.5",
-    "@graphql-codegen/urql-introspection": "2.2.1",
-    "@graphql-typed-document-node/core": "3.2.0",
-    "@iconify-json/lucide": "1.1.144",
-    "@intlify/vite-plugin-vue-i18n": "6.0.1",
-    "@rushstack/eslint-patch": "1.3.3",
-    "@types/lodash-es": "4.17.10",
-    "@types/node": "18.18.8",
-    "@typescript-eslint/eslint-plugin": "5.62.0",
-    "@typescript-eslint/parser": "5.62.0",
-    "@vitejs/plugin-legacy": "2.3.0",
-    "@vitejs/plugin-vue": "4.3.1",
-    "@vue/eslint-config-typescript": "11.0.3",
-    "autoprefixer": "10.4.16",
-    "cross-env": "7.0.3",
-    "eslint": "8.47.0",
-    "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-vue": "9.17.0",
-    "npm-run-all": "4.1.5",
-    "postcss": "8.4.32",
-    "tailwindcss": "3.3.6",
-    "typescript": "4.9.5",
-    "unplugin-fonts": "1.1.1",
-    "unplugin-icons": "0.14.9",
-    "unplugin-vue-components": "0.21.0",
-    "vite": "4.5.0",
-    "vite-plugin-html-config": "1.0.11",
-    "vite-plugin-inspect": "0.7.38",
-    "vite-plugin-pages": "0.26.0",
-    "vite-plugin-pages-sitemap": "1.6.1",
-    "vite-plugin-pwa": "0.13.1",
-    "vite-plugin-static-copy": "0.12.0",
-    "vite-plugin-vue-layouts": "0.7.0",
-    "vue-tsc": "1.8.8"
-  }
+  "scripts.dev:vite": "vite",
+  "scripts.dev:gql-codegen": "graphql-codegen --require dotenv/config --config gql-codegen.yml dotenv_config_path=\"../../.env\" --watch",
+  "scripts.dev": "pnpm exec npm-run-all -p -l dev:*",
+  "scripts.build": "node --max_old_space_size=4096 ./node_modules/vite/bin/vite.js build",
+  "scripts.preview": "vite preview",
+  "scripts.tauri": "tauri",
+  "scripts.gql-codegen": "graphql-codegen --require dotenv/config --config gql-codegen.yml dotenv_config_path=\"../../.env\"",
+  "dependencies.@fontsource-variable/inter": "5.0.15",
+  "dependencies.@fontsource-variable/material-symbols-rounded": "5.0.16",
+  "dependencies.@fontsource-variable/roboto-mono": "5.0.16",
+  "dependencies.@hoppscotch/common": "workspace:^",
+  "dependencies.@hoppscotch/data": "workspace:^",
+  "dependencies.@platform/auth": "0.1.106",
+  "dependencies.@tauri-apps/api": "1.5.1",
+  "dependencies.@tauri-apps/cli": "1.5.6",
+  "dependencies.@vueuse/core": "10.5.0",
+  "dependencies.axios": "1.7.5",
+  "dependencies.buffer": "6.0.3",
+  "dependencies.dioc": "3.0.2",
+  "dependencies.environments.api": "link:@platform/environments/environments.api",
+  "dependencies.event": "link:@tauri-apps/api/event",
+  "dependencies.fp-ts": "2.16.1",
+  "dependencies.lodash-es": "4.17.21",
+  "dependencies.process": "0.11.10",
+  "dependencies.rxis": "7.8.1",
+  "dependencies.shell": "link:@tauri-apps/api/shell",
+  "dependencies.stream-browserify": "3.0.0",
+  "dependencies.tauri": "link:@tauri-apps/api/tauri",
+  "dependencies.tauri-plugin-store-api": "0.0.0",
+  "dependencies.util": "0.12.5",
+  "dependencies.verzod": "0.2.2",
+  "dependencies.vue": "3.3.9",
+  "dependencies.workbox-window": "6.6.0",
+  "dependencies.zod": "3.22.4",
+  "devDependencies.@graphql-codegen/add": "5.0.0",
+  "devDependencies.@graphql-codegen/cli": "5.0.0",
+  "devDependencies.@graphql-codegen/typed-document-node": "5.0.1",
+  "devDependencies.@graphql-codegen/typescript": "4.0.1",
+  "devDependencies.@graphql-codegen/typescript-operations": "4.0.1",
+  "devDependencies.@graphql-codegen/typescript-urql-graphcache": "2.4.5",
+  "devDependencies.@graphql-codegen/urql-introspection": "2.2.1",
+  "devDependencies.@graphql-typed-document-node/core": "3.2.0",
+  "devDependencies.@iconify-json/lucide": "1.1.144",
+  "devDependencies.@intlify/vite-plugin-vue-i18n": "6.0.1",
+  "devDependencies.@rushstack/eslint-patch": "1.3.3",
+  "devDependencies.@types/lodash-es": "4.17.10",
+  "devDependencies.@types/node": "18.18.8",
+  "devDependencies.@typescript-eslint/eslint-plugin": "5.62.0",
+  "devDependencies.@typescript-eslint/parser": "5.62.0",
+  "devDependencies.@vitejs/plugin-legacy": "2.3.0",
+  "devDependencies.@vitejs/plugin-vue": "4.3.1",
+  "devDependencies.@vue/eslint-config-typescript": "11.0.3",
+  "devDependencies.autoprefixer": "10.4.16",
+  "devDependencies.cross-env": "7.0.3",
+  "devDependencies.eslint": "8.47.0",
+  "devDependencies.eslint-plugin-prettier": "4.2.1",
+  "devDependencies.eslint-plugin-vue": "9.17.0",
+  "devDependencies.npm-run-all": "4.1.5",
+  "devDependencies.postcss": "8.4.32",
+  "devDependencies.tailwindcss": "3.3.6",
+  "devDependencies.typescript": "4.9.5",
+  "devDependencies.unplugin-fonts": "1.1.1",
+  "devDependencies.unplugin-icons": "0.14.9",
+  "devDependencies.unplugin-vue-components": "0.21.0",
+  "devDependencies.vite": "4.5.0",
+  "devDependencies.vite-plugin-html-config": "1.0.11",
+  "devDependencies.vite-plugin-inspect": "0.7.38",
+  "devDependencies.vite-plugin-pages": "0.26.0",
+  "devDependencies.vite-plugin-pages-sitemap": "1.6.1",
+  "devDependencies.vite-plugin-pwa": "0.13.1",
+  "devDependencies.vite-plugin-static-copy": "0.12.0",
+  "devDependencies.vite-plugin-vue-layouts": "0.7.0",
+  "devDependencies.vue-tsc": "1.8.8"
 }
