--- a/packages/hoppscotch-selfhost-web/tsconfig.node.json
+++ b/packages/hoppscotch-selfhost-web/tsconfig.node.json
@@ -1,9 +1,8 @@
 {
-  "compilerOptions": {
-    "composite": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "allowSyntheticDefaultImports": true
-  },
-  "include": ["vite.config.ts", "meta.ts"]
+  "compilerOptions.composite": true,
+  "compilerOptions.module": "ESNext",
+  "compilerOptions.moduleResolution": "Node",
+  "compilerOptions.allowSyntheticDefaultImports": true,
+  "include.0": "vite.config.ts",
+  "include.1": "meta.ts"
 }
