--- a/packages/hoppscotch-sh-admin/package.json
+++ b/packages/hoppscotch-sh-admin/package.json
@@ -3,80 +3,72 @@
   "private": true,
   "version": "2024.9.1",
   "type": "module",
-  "scripts": {
-    "dev": "pnpm exec npm-run-all -p -l dev:*",
-    "dev:vite": "vite",
-    "dev:gql-codegen": "graphql-codegen --require dotenv/config --config gql-codegen.yml --watch dotenv_config_path=\"../../.env\"",
-    "gql-codegen": "graphql-codegen --require dotenv/config --config gql-codegen.yml dotenv_config_path=\"../../.env\"",
-    "postinstall": "pnpm run gql-codegen",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@fontsource-variable/inter": "5.0.5",
-    "@fontsource-variable/material-symbols-rounded": "5.0.5",
-    "@fontsource-variable/roboto-mono": "5.0.6",
-    "@graphql-typed-document-node/core": "3.1.1",
-    "@hoppscotch/ui": "0.1.3",
-    "@hoppscotch/vue-toasted": "0.1.0",
-    "@intlify/unplugin-vue-i18n": "1.2.0",
-    "@types/cors": "2.8.13",
-    "@types/express": "4.17.16",
-    "@urql/exchange-auth": "2.1.6",
-    "@urql/vue": "1.1.2",
-    "@vueuse/core": "9.12.0",
-    "axios": "1.7.5",
-    "cors": "2.8.5",
-    "date-fns": "2.29.3",
-    "express": "4.20.0",
-    "express-graphql": "0.12.0",
-    "fp-ts": "2.13.1",
-    "graphql": "16.6.0",
-    "io-ts": "2.2.16",
-    "lodash-es": "4.17.21",
-    "postcss": "8.4.31",
-    "prettier-plugin-tailwindcss": "0.5.7",
-    "rxjs": "7.8.0",
-    "tailwindcss": "3.3.5",
-    "tippy.js": "6.3.7",
-    "ts-node-dev": "2.0.0",
-    "unplugin-icons": "0.14.9",
-    "unplugin-vue-components": "0.21.0",
-    "vue": "3.3.9",
-    "vue-i18n": "9.2.2",
-    "vue-router": "4.1.0",
-    "vue-tippy": "6.0.0-alpha.58"
-  },
-  "devDependencies": {
-    "@graphql-codegen/cli": "3.0.0",
-    "@graphql-codegen/client-preset": "2.1.0",
-    "@graphql-codegen/introspection": "3.0.0",
-    "@graphql-codegen/typed-document-node": "2.3.1",
-    "@graphql-codegen/typescript": "3.0.0",
-    "@graphql-codegen/typescript-document-nodes": "3.0.0",
-    "@graphql-codegen/typescript-operations": "3.0.0",
-    "@graphql-codegen/urql-introspection": "2.2.1",
-    "@iconify-json/lucide": "1.1.144",
-    "@import-meta-env/cli": "0.6.3",
-    "@import-meta-env/unplugin": "0.4.8",
-    "@types/lodash-es": "4.17.12",
-    "@vitejs/plugin-vue": "3.2.0",
-    "@vue/compiler-sfc": "3.2.45",
-    "dotenv": "16.3.1",
-    "graphql-tag": "2.12.6",
-    "hoppscotch-backend": "workspace:^",
-    "npm-run-all": "4.1.5",
-    "sass": "1.58.0",
-    "ts-node": "10.9.1",
-    "typescript": "4.9.3",
-    "unplugin-fonts": "1.0.3",
-    "vite": "3.2.4",
-    "vite-plugin-pages": "0.26.0",
-    "vite-plugin-vue-layouts": "0.7.0",
-    "vue-tsc": "0.3.0"
-  },
-  "prettier": {
-    "singleQuote": true,
-    "semi": true
-  }
+  "scripts.dev": "pnpm exec npm-run-all -p -l dev:*",
+  "scripts.dev:vite": "vite",
+  "scripts.dev:gql-codegen": "graphql-codegen --require dotenv/config --config gql-codegen.yml --watch dotenv_config_path=\"../../.env\"",
+  "scripts.gql-codegen": "graphql-codegen --require dotenv/config --config gql-codegen.yml dotenv_config_path=\"../../.env\"",
+  "scripts.postinstall": "pnpm run gql-codegen",
+  "scripts.build": "vite build",
+  "scripts.preview": "vite preview",
+  "dependencies.@fontsource-variable/inter": "5.0.5",
+  "dependencies.@fontsource-variable/material-symbols-rounded": "5.0.5",
+  "dependencies.@fontsource-variable/roboto-mono": "5.0.6",
+  "dependencies.@graphql-typed-document-node/core": "3.1.1",
+  "dependencies.@hoppscotch/ui": "0.1.3",
+  "dependencies.@hoppscotch/vue-toasted": "0.1.0",
+  "dependencies.@intlify/unplugin-vue-i18n": "1.2.0",
+  "dependencies.@types/cors": "2.8.13",
+  "dependencies.@types/express": "4.17.16",
+  "dependencies.@urql/exchange-auth": "2.1.6",
+  "dependencies.@urql/vue": "1.1.2",
+  "dependencies.@vueuse/core": "9.12.0",
+  "dependencies.axios": "1.7.5",
+  "dependencies.cors": "2.8.5",
+  "dependencies.date-fns": "2.29.3",
+  "dependencies.express": "4.20.0",
+  "dependencies.express-graphql": "0.12.0",
+  "dependencies.fp-ts": "2.13.1",
+  "dependencies.graphql": "16.6.0",
+  "dependencies.io-ts": "2.2.16",
+  "dependencies.lodash-es": "4.17.21",
+  "dependencies.postcss": "8.4.31",
+  "dependencies.prettier-plugin-tailwindcss": "0.5.7",
+  "dependencies.rxjs": "7.8.0",
+  "dependencies.tailwindcss": "3.3.5",
+  "dependencies.tippy.js": "6.3.7",
+  "dependencies.ts-node-dev": "2.0.0",
+  "dependencies.unplugin-icons": "0.14.9",
+  "dependencies.unplugin-vue-components": "0.21.0",
+  "dependencies.vue": "3.3.9",
+  "dependencies.vue-i18n": "9.2.2",
+  "dependencies.vue-router": "4.1.0",
+  "dependencies.vue-tippy": "6.0.0-alpha.58",
+  "devDependencies.@graphql-codegen/cli": "3.0.0",
+  "devDependencies.@graphql-codegen/client-preset": "2.1.0",
+  "devDependencies.@graphql-codegen/introspection": "3.0.0",
+  "devDependencies.@graphql-codegen/typed-document-node": "2.3.1",
+  "devDependencies.@graphql-codegen/typescript": "3.0.0",
+  "devDependencies.@graphql-codegen/typescript-document-nodes": "3.0.0",
+  "devDependencies.@graphql-codegen/typescript-operations": "3.0.0",
+  "devDependencies.@graphql-codegen/urql-introspection": "2.2.1",
+  "devDependencies.@iconify-json/lucide": "1.1.144",
+  "devDependencies.@import-meta-env/cli": "0.6.3",
+  "devDependencies.@import-meta-env/unplugin": "0.4.8",
+  "devDependencies.@types/lodash-es": "4.17.12",
+  "devDependencies.@vitejs/plugin-vue": "3.2.0",
+  "devDependencies.@vue/compiler-sfc": "3.2.45",
+  "devDependencies.dotenv": "16.3.1",
+  "devDependencies.graphql-tag": "2.12.6",
+  "devDependencies.hoppscotch-backend": "workspace:^",
+  "devDependencies.npm-run-all": "4.1.5",
+  "devDependencies.sass": "1.58.0",
+  "devDependencies.ts-node": "10.9.1",
+  "devDependencies.typescript": "4.9.3",
+  "devDependencies.unplugin-fonts": "1.0.3",
+  "devDependencies.vite": "3.2.4",
+  "devDependencies.vite-plugin-pages": "0.26.0",
+  "devDependencies.vite-plugin-vue-layouts": "0.7.0",
+  "devDependencies.vue-tsc": "0.3.0",
+  "prettier.singleQuote": true,
+  "prettier.semi": true
 }
