--- a/packages/hoppscotch-agent/src-tauri/Cargo.toml
+++ b/packages/hoppscotch-agent/src-tauri/Cargo.toml
@@ -2,7 +2,7 @@
 name = "hoppscotch-agent"
 version = "0.1.1"
 description = "A cross-platform HTTP request agent for Hoppscotch for advanced request handling including custom headers, certificates, proxies, and local system integration."
-authors = ["CuriousCorrelation", "AndrewBastin"]
+authors = ["AndrewBastin", "CuriousCorrelation"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
