feat: `openssl`-only fork of `curl-rust`

--- a/packages/hoppscotch-agent/src-tauri/Cargo.toml
+++ b/packages/hoppscotch-agent/src-tauri/Cargo.toml
@@ -31,12 +31,12 @@ chrono = { version = "0.4", features = ["serde"] }
 rand = "0.8.5"
 log = "0.4.22"
 env_logger = "0.11.5"
-curl = { version = "0.4.47", features = ["ntlm", "static-curl", "static-ssl"] }
-openssl = { version = "0.10.68", features = ["vendored"] }
-openssl-sys = { version = "0.9.104", features = ["vendored"] }
+curl = { git = "https://github.com/CuriousCorrelation/curl-rust.git", features = ["ntlm"] }
+openssl = { version = "0.10.66", features = ["vendored"] }
+openssl-sys = { version = "0.9.103", features = ["vendored"] }
 url-escape = "0.1.1"
 thiserror = "1.0.64"
-tauri-plugin-store = "2.0.1"
+tauri-plugin-store = "2.1.0"
 x25519-dalek = { version = "2.0.1", features = ["getrandom"] }
 base16 = "0.2.1"
 aes-gcm = { version = "0.10.3", features = ["aes"] }
