--- a/packages/hoppscotch-common/package.json
+++ b/packages/hoppscotch-common/package.json
@@ -104,7 +104,7 @@
     "workbox-window": "7.1.0",
     "xml-formatter": "3.6.3",
     "yargs-parser": "21.1.1",
-    "zod": "3.22.4"
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "0.2.3",
@@ -137,7 +137,7 @@
     "@urql/exchange-graphcache": "6.5.1",
     "@vitejs/plugin-vue": "5.1.4",
     "@vue/compiler-sfc": "3.5.12",
-    "@vue/eslint-config-typescript": "12.0.0",
+    "@vue/eslint-config-typescript": "13.0.0",
     "@vue/runtime-core": "3.5.12",
     "autoprefixer": "10.4.20",
     "cross-env": "7.0.3",
@@ -146,6 +146,7 @@
     "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-vue": "9.29.0",
     "glob": "11.0.0",
+    "jsdom": "25.0.1",
     "npm-run-all": "4.1.5",
     "openapi-types": "12.1.3",
     "postcss": "8.4.47",
@@ -154,7 +155,7 @@
     "rollup-plugin-polyfill-node": "0.13.0",
     "sass": "1.79.5",
     "tailwindcss": "3.4.14",
-    "typescript": "5.4.5",
+    "typescript": "5.3.3",
     "unplugin-fonts": "1.1.1",
     "unplugin-icons": "0.19.3",
     "unplugin-vue-components": "0.27.4",
