--- a/package.json
+++ b/package.json
@@ -34,12 +34,11 @@
   },
   "pnpm": {
     "overrides": {
+      "cookie": "0.7.2",
       "vue": "3.3.9",
       "@nestjs-modules/mailer>mjml": "5.0.0-alpha.4",
       "subscriptions-transport-ws>ws": "7.5.10",
-      "@nestjs/graphql>ws": "8.17.1",
       "braces": "3.0.3",
-      "express": "4.20.0",
       "send": "0.19.0",
       "pug": "3.0.3",
       "body-parser": "1.20.3",
