--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "prepare": "husky install",
+    "prepare": "husky",
     "dev": "pnpm -r do-dev",
     "gen-gql": "cross-env GQL_SCHEMA_EMIT_LOCATION='../../../gql-gen/backend-schema.gql' pnpm -r generate-gql-sdl",
     "generate": "pnpm -r do-build-prod",
@@ -23,14 +23,14 @@
     "./packages/*"
   ],
   "devDependencies": {
-    "@commitlint/cli": "16.3.0",
-    "@commitlint/config-conventional": "16.2.4",
-    "@hoppscotch/ui": "0.2.0",
-    "@types/node": "17.0.27",
+    "@commitlint/cli": "19.5.0",
+    "@commitlint/config-conventional": "19.5.0",
+    "@hoppscotch/ui": "0.2.1",
+    "@types/node": "22.7.6",
     "cross-env": "7.0.3",
     "http-server": "14.1.1",
-    "husky": "7.0.4",
-    "lint-staged": "12.4.0"
+    "husky": "9.1.6",
+    "lint-staged": "15.2.10"
   },
   "pnpm": {
     "overrides": {
