--- a/packages/hoppscotch-common/package.json
+++ b/packages/hoppscotch-common/package.json
@@ -1,167 +1,174 @@
 {
   "name": "@hoppscotch/common",
   "private": true,
-  "version": "2024.9.1",
-  "scripts.dev": "pnpm exec npm-run-all -p -l dev:*",
-  "scripts.test": "vitest --run",
-  "scripts.test:watch": "vitest",
-  "scripts.dev:vite": "vite",
-  "scripts.dev:gql-codegen": "graphql-codegen --require dotenv/config --config gql-codegen.yml --watch dotenv_config_path=\"../../.env\"",
-  "scripts.lint": "eslint src --ext .ts,.js,.vue --ignore-path .gitignore .",
-  "scripts.lint:ts": "vue-tsc --noEmit",
-  "scripts.prod-lint": "cross-env HOPP_LINT_FOR_PROD=true pnpm run lint",
-  "scripts.lintfix": "eslint --fix src --ext .ts,.js,.vue --ignore-path .gitignore .",
-  "scripts.preview": "vite preview",
-  "scripts.gql-codegen": "graphql-codegen --require dotenv/config --config gql-codegen.yml dotenv_config_path=\"../../.env\"",
-  "scripts.postinstall": "pnpm run gql-codegen",
-  "scripts.do-test": "pnpm run test",
-  "scripts.do-lint": "pnpm run prod-lint",
-  "scripts.do-typecheck": "node type-check.mjs",
-  "scripts.do-lintfix": "pnpm run lintfix",
-  "dependencies.@apidevtools/swagger-parser": "10.1.0",
-  "dependencies.@codemirror/autocomplete": "6.13.0",
-  "dependencies.@codemirror/commands": "6.3.3",
-  "dependencies.@codemirror/lang-javascript": "6.2.2",
-  "dependencies.@codemirror/lang-json": "6.0.1",
-  "dependencies.@codemirror/lang-xml": "6.1.0",
-  "dependencies.@codemirror/language": "6.10.1",
-  "dependencies.@codemirror/legacy-modes": "6.3.3",
-  "dependencies.@codemirror/lint": "6.5.0",
-  "dependencies.@codemirror/merge": "6.7.0",
-  "dependencies.@codemirror/search": "6.5.6",
-  "dependencies.@codemirror/state": "6.4.1",
-  "dependencies.@codemirror/view": "6.25.1",
-  "dependencies.@hoppscotch/codemirror-lang-graphql": "workspace:^",
-  "dependencies.@hoppscotch/data": "workspace:^",
-  "dependencies.@hoppscotch/httpsnippet": "3.0.6",
-  "dependencies.@hoppscotch/js-sandbox": "workspace:^",
-  "dependencies.@hoppscotch/ui": "0.2.0",
-  "dependencies.@hoppscotch/vue-toasted": "0.1.0",
-  "dependencies.@lezer/highlight": "1.2.0",
-  "dependencies.@noble/curves": "1.6.0",
-  "dependencies.@scure/base": "1.1.9",
-  "dependencies.@shopify/lang-jsonc": "1.0.0",
-  "dependencies.@unhead/vue": "1.8.8",
-  "dependencies.@urql/core": "4.2.0",
-  "dependencies.@urql/devtools": "2.0.3",
-  "dependencies.@urql/exchange-auth": "2.1.6",
-  "dependencies.@urql/exchange-graphcache": "6.4.0",
-  "dependencies.@vitejs/plugin-legacy": "4.1.1",
-  "dependencies.@vueuse/core": "10.7.0",
-  "dependencies.acorn-walk": "8.3.0",
-  "dependencies.aws4fetch": "1.0.19",
-  "dependencies.axios": "1.7.5",
-  "dependencies.buffer": "6.0.3",
-  "dependencies.cookie-es": "1.0.0",
-  "dependencies.dioc": "3.0.2",
-  "dependencies.esprima": "4.0.1",
-  "dependencies.events": "3.3.0",
-  "dependencies.fp-ts": "2.16.1",
-  "dependencies.globalthis": "1.0.3",
-  "dependencies.graphql": "16.8.1",
-  "dependencies.graphql-language-service-interface": "2.10.2",
-  "dependencies.graphql-tag": "2.12.6",
-  "dependencies.insomnia-importers": "3.6.0",
-  "dependencies.io-ts": "2.2.20",
-  "dependencies.js-yaml": "4.1.0",
-  "dependencies.jsonc-parser": "3.3.1",
-  "dependencies.jsonpath-plus": "7.2.0",
-  "dependencies.lodash-es": "4.17.21",
-  "dependencies.lossless-json": "3.0.2",
-  "dependencies.minisearch": "6.3.0",
-  "dependencies.nprogress": "0.2.0",
-  "dependencies.paho-mqtt": "1.1.0",
-  "dependencies.path": "0.12.7",
-  "dependencies.postman-collection": "4.3.0",
-  "dependencies.process": "0.11.10",
-  "dependencies.qs": "6.11.2",
-  "dependencies.quicktype-core": "23.0.79",
-  "dependencies.rxs": "7.8.1",
-  "dependencies.set-cookie-parser": "2.6.0",
-  "dependencies.set-cookie-parser-es": "1.0.5",
-  "dependencies.socket.io-client-v2": "npm:socket.io-client@2.4.0",
-  "dependencies.socket.io-client-v3": "npm:socket.io-client@3.1.3",
-  "dependencies.socket.io-client-v4": "npm:socket.io-client@4.4.1",
-  "dependencies.socketio-wildcard": "2.0.0",
-  "dependencies.splitpanes": "3.1.5",
-  "dependencies.stream-browserify": "3.0.0",
-  "dependencies.subscriptions-transport-ws": "0.11.0",
-  "dependencies.tern": "0.24.3",
-  "dependencies.timers": "0.1.1",
-  "dependencies.tippy.js": "6.3.7",
-  "dependencies.url": "0.11.3",
-  "dependencies.util": "0.12.5",
-  "dependencies.uuid": "9.0.1",
-  "dependencies.verzod": "0.2.2",
-  "dependencies.vue": "3.3.9",
-  "dependencies.vue-i18n": "9.8.0",
-  "dependencies.vue-pdf-embed": "1.2.1",
-  "dependencies.vue-router": "4.2.5",
-  "dependencies.vue-tippy": "6.3.1",
-  "dependencies.vuedraggable-es": "4.1.1",
-  "dependencies.wonka": "6.3.4",
-  "dependencies.workbox-window": "7.0.0",
-  "dependencies.xml-formatter": "3.6.0",
-  "dependencies.yargs-parser": "21.1.1",
-  "dependencies.zod": "3.22.4",
-  "devDependencies.@esbuild-plugins/node-globals-polyfill": "0.2.3",
-  "devDependencies.@esbuild-plugins/node-modules-polyfill": "0.2.2",
-  "devDependencies.@graphql-codegen/add": "5.0.0",
-  "devDependencies.@graphql-codegen/cli": "5.0.0",
-  "devDependencies.@graphql-codegen/typed-document-node": "5.0.1",
-  "devDependencies.@graphql-codegen/typescript": "4.0.1",
-  "devDependencies.@graphql-codegen/typescript-operations": "4.0.1",
-  "devDependencies.@graphql-codegen/typescript-urql-graphcache": "3.0.0",
-  "devDependencies.@graphql-codegen/urql-introspection": "3.0.0",
-  "devDependencies.@graphql-typed-document-node/core": "3.2.0",
-  "devDependencies.@iconify-json/lucide": "1.1.144",
-  "devDependencies.@intlify/vite-plugin-vue-i18n": "7.0.0",
-  "devDependencies.@relmify/jest-fp-ts": "2.1.1",
-  "devDependencies.@rushstack/eslint-patch": "1.6.0",
-  "devDependencies.@types/har-format": "1.2.15",
-  "devDependencies.@types/js-yaml": "4.0.9",
-  "devDependencies.@types/lodash-es": "4.17.12",
-  "devDependencies.@types/lossless-json": "1.0.4",
-  "devDependencies.@types/nprogress": "0.2.3",
-  "devDependencies.@types/paho-mqtt": "1.0.10",
-  "devDependencies.@types/postman-collection": "3.5.10",
-  "devDependencies.@types/qs": "6.9.12",
-  "devDependencies.@types/splitpanes": "2.2.6",
-  "devDependencies.@types/uuid": "9.0.7",
-  "devDependencies.@types/yargs-parser": "21.0.3",
-  "devDependencies.@typescript-eslint/eslint-plugin": "7.3.1",
-  "devDependencies.@typescript-eslint/parser": "7.3.1",
-  "devDependencies.@vitejs/plugin-vue": "4.5.1",
-  "devDependencies.@vue/compiler-sfc": "3.3.10",
-  "devDependencies.@vue/eslint-config-typescript": "12.0.0",
-  "devDependencies.autoprefixer": "10.4.16",
-  "devDependencies.cross-env": "7.0.3",
-  "devDependencies.dotenv": "16.3.1",
-  "devDependencies.eslint": "8.57.0",
-  "devDependencies.eslint-plugin-prettier": "5.1.3",
-  "devDependencies.eslint-plugin-vue": "9.24.0",
-  "devDependencies.glob": "10.3.10",
-  "devDependencies.npm-run-all": "4.1.5",
-  "devDependencies.openapi-types": "12.1.3",
-  "devDependencies.postcss": "8.4.31",
-  "devDependencies.prettier": "3.1.0",
-  "devDependencies.prettier-plugin-tailwindcss": "0.5.7",
-  "devDependencies.rollup-plugin-polyfill-node": "0.13.0",
-  "devDependencies.sass": "1.69.5",
-  "devDependencies.tailwindcss": "3.3.5",
-  "devDependencies.typescript": "5.3.2",
-  "devDependencies.unplugin-fonts": "1.1.1",
-  "devDependencies.unplugin-icons": "0.17.4",
-  "devDependencies.unplugin-vue-components": "0.25.2",
-  "devDependencies.vite": "4.5.0",
-  "devDependencies.vite-plugin-checker": "0.6.2",
-  "devDependencies.vite-plugin-fonts": "0.7.0",
-  "devDependencies.vite-plugin-html-config": "1.0.11",
-  "devDependencies.vite-plugin-inspect": "0.7.42",
-  "devDependencies.vite-plugin-pages": "0.31.0",
-  "devDependencies.vite-plugin-pages-sitemap": "1.6.1",
-  "devDependencies.vite-plugin-pwa": "0.17.3",
-  "devDependencies.vite-plugin-vue-layouts": "0.8.0",
-  "devDependencies.vitest": "0.34.6",
-  "devDependencies.vue-tsc": "1.8.24"
+  "version": "2024.9.3",
+  "scripts": {
+    "dev": "pnpm exec npm-run-all -p -l dev:*",
+    "test": "vitest --run",
+    "test:watch": "vitest",
+    "dev:vite": "vite",
+    "dev:gql-codegen": "graphql-codegen --require dotenv/config --config gql-codegen.yml --watch dotenv_config_path=\"../../.env\"",
+    "lint": "eslint src --ext .ts,.js,.vue --ignore-path .gitignore .",
+    "lint:ts": "vue-tsc --noEmit",
+    "prod-lint": "cross-env HOPP_LINT_FOR_PROD=true pnpm run lint",
+    "lintfix": "eslint --fix src --ext .ts,.js,.vue --ignore-path .gitignore .",
+    "preview": "vite preview",
+    "gql-codegen": "graphql-codegen --require dotenv/config --config gql-codegen.yml dotenv_config_path=\"../../.env\"",
+    "postinstall": "pnpm run gql-codegen",
+    "do-test": "pnpm run test",
+    "do-lint": "pnpm run prod-lint",
+    "do-typecheck": "node type-check.mjs",
+    "do-lintfix": "pnpm run lintfix"
+  },
+  "dependencies": {
+    "@apidevtools/swagger-parser": "10.1.0",
+    "@codemirror/autocomplete": "6.13.0",
+    "@codemirror/commands": "6.3.3",
+    "@codemirror/lang-javascript": "6.2.2",
+    "@codemirror/lang-json": "6.0.1",
+    "@codemirror/lang-xml": "6.1.0",
+    "@codemirror/language": "6.10.1",
+    "@codemirror/legacy-modes": "6.3.3",
+    "@codemirror/lint": "6.5.0",
+    "@codemirror/merge": "6.7.0",
+    "@codemirror/search": "6.5.6",
+    "@codemirror/state": "6.4.1",
+    "@codemirror/view": "6.25.1",
+    "@hoppscotch/codemirror-lang-graphql": "workspace:^",
+    "@hoppscotch/data": "workspace:^",
+    "@hoppscotch/httpsnippet": "3.0.6",
+    "@hoppscotch/js-sandbox": "workspace:^",
+    "@hoppscotch/ui": "0.2.0",
+    "@hoppscotch/vue-toasted": "0.1.0",
+    "@lezer/highlight": "1.2.0",
+    "@noble/curves": "1.6.0",
+    "@scure/base": "1.1.9",
+    "@shopify/lang-jsonc": "1.0.0",
+    "@unhead/vue": "1.8.8",
+    "@urql/core": "4.2.0",
+    "@urql/devtools": "2.0.3",
+    "@urql/exchange-auth": "2.1.6",
+    "@urql/exchange-graphcache": "6.4.0",
+    "@vitejs/plugin-legacy": "4.1.1",
+    "@vueuse/core": "10.7.0",
+    "acorn-walk": "8.3.0",
+    "aws4fetch": "1.0.19",
+    "axios": "1.7.5",
+    "buffer": "6.0.3",
+    "cookie-es": "1.0.0",
+    "dioc": "3.0.2",
+    "esprima": "4.0.1",
+    "events": "3.3.0",
+    "fp-ts": "2.16.1",
+    "globalthis": "1.0.3",
+    "graphql": "16.8.1",
+    "graphql-language-service-interface": "2.10.2",
+    "graphql-tag": "2.12.6",
+    "insomnia-importers": "3.6.0",
+    "io-ts": "2.2.20",
+    "js-yaml": "4.1.0",
+    "jsonc-parser": "3.3.1",
+    "jsonpath-plus": "7.2.0",
+    "lodash-es": "4.17.21",
+    "lossless-json": "3.0.2",
+    "minisearch": "6.3.0",
+    "nprogress": "0.2.0",
+    "paho-mqtt": "1.1.0",
+    "path": "0.12.7",
+    "postman-collection": "4.3.0",
+    "process": "0.11.10",
+    "qs": "6.11.2",
+    "quicktype-core": "23.0.79",
+    "rxjs": "7.8.1",
+    "set-cookie-parser": "2.6.0",
+    "set-cookie-parser-es": "1.0.5",
+    "socket.io-client-v2": "npm:socket.io-client@2.4.0",
+    "socket.io-client-v3": "npm:socket.io-client@3.1.3",
+    "socket.io-client-v4": "npm:socket.io-client@4.4.1",
+    "socketio-wildcard": "2.0.0",
+    "splitpanes": "3.1.5",
+    "stream-browserify": "3.0.0",
+    "subscriptions-transport-ws": "0.11.0",
+    "tern": "0.24.3",
+    "timers": "0.1.1",
+    "tippy.js": "6.3.7",
+    "url": "0.11.3",
+    "util": "0.12.5",
+    "uuid": "9.0.1",
+    "verzod": "0.2.2",
+    "vue": "3.3.9",
+    "vue-i18n": "9.8.0",
+    "vue-pdf-embed": "1.2.1",
+    "vue-router": "4.2.5",
+    "vue-tippy": "6.3.1",
+    "vuedraggable-es": "4.1.1",
+    "wonka": "6.3.4",
+    "workbox-window": "7.0.0",
+    "xml-formatter": "3.6.0",
+    "yargs-parser": "21.1.1",
+    "zod": "3.22.4"
+  },
+  "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "0.2.2",
+    "@graphql-codegen/add": "5.0.0",
+    "@graphql-codegen/cli": "5.0.0",
+    "@graphql-codegen/typed-document-node": "5.0.1",
+    "@graphql-codegen/typescript": "4.0.1",
+    "@graphql-codegen/typescript-operations": "4.0.1",
+    "@graphql-codegen/typescript-urql-graphcache": "3.0.0",
+    "@graphql-codegen/urql-introspection": "3.0.0",
+    "@graphql-typed-document-node/core": "3.2.0",
+    "@iconify-json/lucide": "1.1.144",
+    "@intlify/vite-plugin-vue-i18n": "7.0.0",
+    "@relmify/jest-fp-ts": "2.1.1",
+    "@rushstack/eslint-patch": "1.6.0",
+    "@types/har-format": "1.2.15",
+    "@types/js-yaml": "4.0.9",
+    "@types/lodash-es": "4.17.12",
+    "@types/lossless-json": "1.0.4",
+    "@types/nprogress": "0.2.3",
+    "@types/paho-mqtt": "1.0.10",
+    "@types/postman-collection": "3.5.10",
+    "@types/qs": "6.9.12",
+    "@types/splitpanes": "2.2.6",
+    "@types/uuid": "9.0.7",
+    "@types/yargs-parser": "21.0.3",
+    "@typescript-eslint/eslint-plugin": "7.3.1",
+    "@typescript-eslint/parser": "7.3.1",
+    "@vitejs/plugin-vue": "4.5.1",
+    "@vue/compiler-sfc": "3.3.10",
+    "@vue/eslint-config-typescript": "12.0.0",
+    "@vue/runtime-core": "3.3.10",
+    "autoprefixer": "10.4.16",
+    "cross-env": "7.0.3",
+    "dotenv": "16.3.1",
+    "eslint": "8.57.0",
+    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-vue": "9.24.0",
+    "glob": "10.3.10",
+    "npm-run-all": "4.1.5",
+    "openapi-types": "12.1.3",
+    "postcss": "8.4.31",
+    "prettier": "3.1.0",
+    "prettier-plugin-tailwindcss": "0.5.7",
+    "rollup-plugin-polyfill-node": "0.13.0",
+    "sass": "1.69.5",
+    "tailwindcss": "3.3.5",
+    "typescript": "5.3.2",
+    "unplugin-fonts": "1.1.1",
+    "unplugin-icons": "0.17.4",
+    "unplugin-vue-components": "0.25.2",
+    "vite": "4.5.0",
+    "vite-plugin-checker": "0.6.2",
+    "vite-plugin-fonts": "0.7.0",
+    "vite-plugin-html-config": "1.0.11",
+    "vite-plugin-inspect": "0.7.42",
+    "vite-plugin-pages": "0.31.0",
+    "vite-plugin-pages-sitemap": "1.6.1",
+    "vite-plugin-pwa": "0.17.3",
+    "vite-plugin-vue-layouts": "0.8.0",
+    "vitest": "0.34.6",
+    "vue-tsc": "1.8.24"
+  }
 }
