feat: use `hoppscotch-relay` as request proxy

--- a/packages/hoppscotch-agent/src-tauri/Cargo.toml
+++ b/packages/hoppscotch-agent/src-tauri/Cargo.toml
@@ -31,12 +31,7 @@ chrono = { version = "0.4", features = ["serde"] }
 rand = "0.8.5"
 log = "0.4.22"
 env_logger = "0.11.5"
-curl = { git = "https://github.com/CuriousCorrelation/curl-rust.git", features = ["ntlm"] }
-openssl = { version = "0.10.66", features = ["vendored"] }
-# NOTE: This crate follows `openssl-sys` from https://github.com/CuriousCorrelation/curl-rust.git
-# to avoid issues from version mismatch when compiling from source.
-openssl-sys = { version = "0.9.64", features = ["vendored"] }
-url-escape = "0.1.1"
+hoppscotch-relay = { path = "../../hoppscotch-relay" }
 thiserror = "1.0.64"
 tauri-plugin-store = "2.1.0"
 x25519-dalek = { version = "2.0.1", features = ["getrandom"] }
@@ -44,7 +39,6 @@ base16 = "0.2.1"
 aes-gcm = { version = "0.10.3", features = ["aes"] }
 tauri-plugin-updater = "2.0.2"
 tauri-plugin-dialog = "2.0.1"
-http = "1.1.0"
 lazy_static = "1.5.0"
 
 [dev-dependencies]
