--- a/packages/hoppscotch-agent/src-tauri/Cargo.toml
+++ b/packages/hoppscotch-agent/src-tauri/Cargo.toml
@@ -40,6 +40,7 @@ aes-gcm = { version = "0.10.3", features = ["aes"] }
 tauri-plugin-updater = "2.0.2"
 tauri-plugin-dialog = "2.0.1"
 lazy_static = "1.5.0"
+tauri-plugin-single-instance = "2.0.1"
 
 [dev-dependencies]
 mockito = "1.5.0"
