fix: `tempfile` missing with `portable` feature

--- a/packages/hoppscotch-agent/src-tauri/Cargo.toml
+++ b/packages/hoppscotch-agent/src-tauri/Cargo.toml
@@ -42,10 +42,10 @@ tauri-plugin-dialog = "2.0.1"
 lazy_static = "1.5.0"
 tauri-plugin-single-instance = "2.0.1"
 tauri-plugin-http = { version = "2.0.1", features = ["gzip"] }
-tempfile = { version = "3.13.0", optional = true }
 native-dialog = "0.7.0"
 
 [target.'cfg(windows)'.dependencies]
+tempfile = { version = "3.13.0" }
 winreg = { version = "0.52.0", optional = true }
 
 [dev-dependencies]
