--- a/packages/hoppscotch-selfhost-desktop/src-tauri/Cargo.toml
+++ b/packages/hoppscotch-selfhost-desktop/src-tauri/Cargo.toml
@@ -25,7 +25,7 @@ tauri = { version = "1.8.1", features = [
 tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 tauri-plugin-deep-link = { git = "https://github.com/FabianLars/tauri-plugin-deep-link", branch = "main" }
 tauri-plugin-window-state = "0.1.1"
-reqwest = { version = "0.11.27", features = ["native-tls"] }
+hoppscotch-relay = { path = "../../hoppscotch-relay" }
 serde_json = "1.0.128"
 url = "2.5.2"
 hex_color = "3.0.0"
