Improved code for health check - Update docker-compose.deploy.yml
By making the health check more precise, you can ensure that the `hoppscotch-aio` service is not only responding to HTTP requests but also functioning correctly and providing the expected responses.

--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -37,12 +37,7 @@ services:
         condition: service_healthy
     command: ["sh", "-c", "pnpm exec prisma migrate deploy && node /usr/src/app/aio_run.mjs"]
     healthcheck:
-      test:
-        - CMD
-        - curl
-        - '-f'
-        - 'http://localhost:80'
-      interval: 2s
-      timeout: 10s
-      retries: 30
-
+  test: [ "CMD", "curl", "-f", "-s", "-o", "/dev/null", "-w", "%{http_code}", "http://localhost:80" ]
+  interval: 2s
+  timeout: 10s
+  retries: 30
