--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -26,7 +26,7 @@ services:
       context: .
       target: aio
     environment:
-      - DATABASE_URL=postgresql://postgres:testpass@hoppscotch-db:5432/hoppscotch
+      # - DATABASE_URL=postgresql://postgres:testpass@hoppscotch-db:5432/hoppscotch
       - ENABLE_SUBPATH_BASED_ACCESS=true
     env_file:
       - ./.env
